updates google, facebook, tests
